Add filter by deadline and tests

--- a/src/main/resources/templates/someday-tasks.html
+++ b/src/main/resources/templates/someday-tasks.html
@@ -9,10 +9,10 @@
     </head>
 
     <body>
-        <h2>All tasks</h2>
+        <h2>Someday tasks</h2>
+        <input type="button" value="Show all tasks" onclick="window.location.href='all'"/>
         <input type="button" value="Show tasks for today" onclick="window.location.href='selectTasksForToday'"/>
         <input type="button" value="Show tasks for week" onclick="window.location.href='selectTasksForWeek'"/>
-        <input type="button" value="Show tasks for someday" onclick="window.location.href='selectTasksForSomeday'"/>
         <table>
                 <tr>
                     <th>Task</th>
