--- a/src/main/resources/templates/today-tasks.html
+++ b/src/main/resources/templates/today-tasks.html
@@ -9,14 +9,14 @@
     </head>
 
     <body>
-        <h2>All tasks</h2>
-        <input type="button" value="Show tasks for today" onclick="window.location.href='selectTasksForToday'"/>
+        <h2>Tasks for today</h2>
+        <input type="button" value="Show all tasks" onclick="window.location.href='all'"/>
         <input type="button" value="Show tasks for week" onclick="window.location.href='selectTasksForWeek'"/>
         <input type="button" value="Show tasks for someday" onclick="window.location.href='selectTasksForSomeday'"/>
         <table>
                 <tr>
                     <th>Task</th>
-                    <th>When should be done</th>
+                    <th>Deadline</th>
                 </tr>
             <tr th:each="task : ${tasks}">
                 <td th:text="${task.getDescription()}"></td>
