--- a/src/main/resources/templates/edit-task-info.html
+++ b/src/main/resources/templates/edit-task-info.html
@@ -3,13 +3,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <h1>Form</h1>
-<form action="#" th:action="@{/save}" th:object="${task}">
+<form action="#" th:action="@{/saveEdited}" th:object="${task}">
     <p>Description: <input type="text" th:field="*{description}" required/></p>
     <p> Task deadline: <select th:field="*{deadline}">
         <option value="today">Today</option>
         <option value="week">This week</option>
         <option value="someday">Some day</option>
     </select>
+        <input type="hidden" name="id" th:field="*{id}"/>
     </p>
     <p>
         <input type="submit" value="Submit" />
