--- a/src/main/resources/templates/no-tasks.html
+++ b/src/main/resources/templates/no-tasks.html
@@ -14,6 +14,7 @@
     <p>
         <input type="submit" value="Submit" />
     </p>
+    <input type="button" value="Show all tasks" onclick="window.location.href='all'"/>
 </form>
 
 </body>
